# cdk-soa-backend

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  contracts.toml  docker-compose.yml
abi-fetcher/: Cargo.toml  README.md
abi-fetcher/.config/: abi_fetcher.config.yaml  contracts_fetcher.config.yaml  json_rpc_fetcher.config.yaml
abi-fetcher/abi_events_data/: contracts_events.yaml  contracts_output.yaml  events_output.yaml
abi-fetcher/abi_events_data/abi/: ArtifactFactory_0x207Eea90B43515d9e5f6798CE286B1Af02F5eAE2.json  ArtifactStaking_0xeB739B5b19281679BAFA2E8c8406B6C2D2b31394.json  Rewards_0xe50351B10a011DfAE5903A4f99Ef6cA749a59c01.json  Treasury_0x1A3329E7813a35c7E5B4189BB3b21bd112eC6536.json  Treasury_0x4Ab5e8Fc41eD0bB2f6F0BC8c83E57Bc385E390C1.json
abi-fetcher/abi_events_data/contracts/: contracts.yaml  contracts_events.yaml  events.yaml
abi-fetcher/abi_events_data/events/: AddedOwner_address_.txt  AdminChanged_address_address_.txt  AirdropAddressChanged_address_.txt  AirdropClaimed_address_bytes32_uint256_.txt  AllowlistAdded_address_.txt  AllowlistRemoved_address_.txt  Approval_address_address_uint256_.txt  ApproveHash_bytes32_address_.txt  ArtifactAdded_address_string_.txt  ArtifactBatchRevenueReported_address___uint256___uint256___.txt  ArtifactBatchUsageReported_address___uint256___uint256___.txt  ArtifactBeaconChanged_address_.txt  ArtifactCreated_bytes32_address_.txt  ArtifactCreated_bytes32_string_string_address_address_.txt  ArtifactCreated_bytes32_string_uint8_address_tuple___.txt  ArtifactFactoryChanged_address_address_.txt  ArtifactManagerUpdated_address_address_.txt  ArtifactMetadataUpdated_address_string_.txt  ArtifactRemoved_address_.txt  ArtifactRevenueReported_address_uint256_uint256_.txt  ArtifactStakingUpdated_address_address_.txt  ArtifactTypeAdded_string_.txt  ArtifactTypeRemoved_string_.txt  ArtifactUsageReported_address_uint256_uint256_.txt  ArtifactWeightsUpdated_uint256_uint256_.txt  BeaconUpgraded_address_.txt  BridgeEvent_uint8_uint32_address_uint32_address_uint256_bytes_uint32_.txt  ChangedFallbackHandler_address_.txt  ChangedGuard_address_.txt  ChangedThreshold_uint256_.txt  ClaimEvent_uint256_uint32_address_address_uint256_.txt  ContractRegistered_bytes32_address_.txt  ContractRemoved_bytes32_address_.txt  ContractUpdated_bytes32_address_address_.txt  DelegateChanged_address_address_address_.txt  DelegateVotesChanged_address_uint256_uint256_.txt  DepositERC20_address_uint256_address_.txt  DepositETH_address_uint256_.txt  Deposit_address_uint256_.txt  DisabledModule_address_.txt  (+69 more)
abi-fetcher/src/: abi-fetcher.rs  contracts-fetcher.rs  json-rpc-fetcher.rs  main.rs
abi2sol/: Cargo.toml  README.md
abi2sol/src/: abi2sol.rs
agentic-payment-service/: Cargo.toml  README.md  api_client_examples.md  config.yaml  docker_compose.yaml  dockerfile
agentic-payment-service/src/: config.rs  error.rs  handlers.rs  main.rs
agentic-payment-service/src/agent/: mod.rs
agentic-payment-service/src/middleware/: auth.rs  mod.rs  rate_limit.rs
agentic-payment-service/src/payment/: mod.rs  web2.rs  web3.rs
agentic-payment-service/src/protocols/: ap2.rs  mod.rs  x402.rs
agentic-payment-service/tests/: integration_tests.rs
airdrop-backend/: .env  Cargo.toml  README.md  ReadMe.md  docker-compose.yml  example_reference.json  initial_schema.sql  proofs_reference.json
airdrop-backend/.config/: airdrop_backend.config.yaml
airdrop-backend/abi/: AirdropContract.json  AirdropContract.sol
airdrop-backend/src/: config.rs  contract_client.rs  csv_processor.rs  database.rs  encryption.rs  error.rs  external_client.rs  handlers.rs  main.rs  merkle_trie.rs  nats_storage.rs  service.rs
airdrop-eligibility-service/: Cargo.toml  ReadMe.md
airdrop-eligibility-service/merkle-trie-generator/: airdrop.csv
airdrop-eligibility-service/src/: main.rs
cdk-indexer.v1.ethers/: Cargo.toml  README.md
cdk-indexer.v3/: Cargo.toml  config.yaml  docker-compose.yml  init.sql  run.sh
cdk-indexer.v3/abi/: MySecondContract.json
cdk-indexer.v3/src/: abi.rs  config.rs  db.rs  event_decoder.rs  main.rs  nats.rs  subscriptions.rs  types.rs
events-monitor/: Cargo.toml  README.md  docker-compose.yml  init.sql  init_aws_rds_schema.sql  init_table.sql  run.sh
events-monitor/.config/: events_monitor.config.yaml  nats.config
events-monitor/client/: api_client.rs
events-monitor/src/: abi.rs  aws_rds.rs  config.rs  db.rs  main.rs  nats.rs  subscriptions.rs  task_manager.rs  types.rs  web_api.rs
legacy/cdk-indexer.v2.alloy/: Cargo.toml  init.sql
legacy/cdk-indexer.v2.alloy/src/: main.rs  (+1 more)
legacy/cdk-indexer.v4.prototype/: Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  init.schema.sql  run.sh
load-tester-cli/: CHANGELOG.md  CONTRACT_INTERFACE.md  Cargo.toml  README.md  USAGE_GUIDE.md
load-tester-cli/abi/: LoadTesterContract.sol  LoadTester_0x1B3e98760Ce8EC5a481124A76b45fD373CE14BD5.json
load-tester-cli/config.examples/: basic-load.json  mixed-workload.json  storage-stress.json
load-tester-cli/scripts/: run-benchmarks.sh
load-tester-cli/src/: cli.rs  config.rs  main.rs  runner.rs  stats.rs
merkle-trie-cli/: Cargo.toml  MERKLE_VIEM_COMPAT_README.md  Makefile  README.md  example.csv  mock_addresses_wei.csv  show_leaf_content.sh  test_exit_codes.sh
merkle-trie-cli/.docker/: merkle-trie-cli.dockerfile
merkle-trie-cli/docs/: merkle-demo.cast
merkle-trie-cli/src/: lib.rs  merkle_trie.rs
merkle-trie-cli/tests/: integration_test.rs  viem_compat_test.rs
merkle-trie-generator/: .env  Cargo.toml  contract.rs  csv_loader.rs
merkle-trie-generator/src/: contract.rs  main.rs
tx-producer/: CHANGELOG.md  Cargo.toml  README.md
tx-producer/examples/: airdrop_batch.rs  basic_usage.rs  batch_transactions.rs  batch_with_error_handling.rs
tx-producer/src/: contract.rs  error.rs  lib.rs  provider.rs  transaction.rs
tx-producer/tests/: batch_tests.rs
user-id-fetcher/: Cargo.toml  README.md  SUMMARY.md  config.json  userlist.json
user-id-fetcher/src/: user-id-fetcher.rs
(+831 files in other folders)
