[workspace]
members = [
    "events-monitor",
    "abi-fetcher",
]
exclude = [
    "legacy",
    "merkle-trie-generator",
    "merkle-trie-cli",
    "airdrop-backend",
    "user-id-fetcher",
]

# edition = "2021"
resolver = "2"
overflow-checks = true

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

