[workspace]
members = [
    "events-monitor",
    "blocks-monitor",
    "mempool-monitor",
    "abi-fetcher",
    "abi2sol",
]
exclude = [
    "legacy",
    "merkle-trie-generator",
    "merkle-trie-cli",
    "user-id-fetcher",
    "airdrop-backend",
    "tx-producer",
    "load-tester-cli",
]

edition = "2024"
resolver = "2"
overflow-checks = true

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

