[package]
name = "abi-fetcher"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "abi-fetcher"
path = "src/abi-fetcher.rs"

[[bin]]
name = "contracts-fetcher"
path = "src/contracts-fetcher.rs"

[dependencies]
anyhow = "1"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"

sha3 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
