[package]
name = "abi2sol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abi2sol"
path = "src/abi2sol.rs"

[dependencies]
# Alloy (Ethereum) - version 1.0.38
alloy = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
