[package]
name = "airdrop-backend"
version = "0.8.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
hex = "0.4.3"
anyhow = "1.0.99"
futures = "0.3.31"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
serde_with = "3.14.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Alloy 1.0.25 latest
alloy = { version = "1.0.25", features = ["full"] }
alloy-provider = "1.0.25"
alloy-contract = "1.0.25"
alloy-transport-ws = "1.0.25"
alloy-primitives = "1.0.25"
alloy-sol-types = "1.0.25"
alloy-json-abi = "1.0.25"
alloy-dyn-abi = "1.0.25"

# Trie and hashing
keccak-hasher = "0.15.3"
rlp = "0.5.2"
trie-db = "0.24.0"
memory-db = "0.31.0"

# Postgres
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "runtime", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# CSV processing
csv = "1.3.1"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-macros = "0.4.2"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }

# Multipart for file uploads
axum_typed_multipart = "0.12.2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# NATS
async-nats = "0.42"

# AWS KMS
aws-config = "1.5.8"
aws-sdk-kms = "1.51.0"
aws-smithy-types = "1.2.10"

# Encryption
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"

# Tracing
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0.69"

# Secp256k1 for key generation
secp256k1 = { version = "0.29.0", features = ["rand-std"] }

# SHA-256 hashing
sha2 = "0.10.8"

openssl = { version = "0.10", features = ["vendored"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Binary encoding
bincode = "2.0"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]
