[package]
name = "airdrop-backend"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "airdrop-backend"
path = "src/main.rs"

[dependencies]
# Core dependencies
# Core async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"

# Web framework
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors"] }
# axum-macros = "0.4.2"
# Multipart for file uploads
# axum_typed_multipart = "0.16.4"

# Serialization
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
# serde_with = "3.15.0"

# Hex encoding
hex = "0.4.3"

# Base64 encoding
base64 = "0.22.1"

# Binary encoding
bincode = "2.0"

# Alloy (Ethereum) - version 1.0.38
alloy = { version = "1.0.41", features = ["full", "node-bindings", "rpc-types", "signer-local"] }
alloy-primitives = "1.4.0"
alloy-sol-types = "1.4.0"
alloy-dyn-abi = "1.4.0"
alloy-json-abi = "1.4.0"
alloy-contract = "1.0.41"
alloy-signer = "1.0.41"
alloy-signer-local = "1.0.41"
alloy-provider = "1.0.41"
alloy-network = "1.0.41"
alloy-transport-http = "1.0.41"
alloy-transport-ws = "1.0.41"

# Transaction producer library
tx-producer = { path = "../tx-producer" }

# PostgreSQL Database
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4", "runtime", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# NATS
async-nats = "0.44.2"

# AWS SDK KMS
aws-config = "1.5.11"
aws-sdk-kms = "1.87.0"
aws-smithy-types = "1.3.2"

# Merkle Trie Cryptography
keccak-hasher = "0.16.0"
hash-db = "0.16.0"
# rlp = "0.5.2"

# Encryption
aes-gcm = "0.10.3"
rand = "0.8.5"

# Secp256k1 for key generation
secp256k1 = { version = "0.29.0", features = ["rand-std"] }

# SHA-256 hashing
sha2 = "0.10.8"

# OpenSSL vendored statically binded
openssl = { version = "0.10", features = ["vendored"] }

# Error handling
anyhow = "1.0.100"
thiserror = "1.0.69"

# Timestamps
chrono = { version = "0.4.42", features = ["serde"] }

# UUID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# CSV processing
csv = "1.3.1"

# HTTP requests client
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]
