[package]
name = "airdrop-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
hex = "0.4.3"
anyhow = "1.0.99"
futures = "0.3.31"
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
serde_with = "3.14.0"
toml = "0.8.23"
openssl = "0.10.73"
csv = "1.3.1"
async-nats = "0.42.0"
alloy-dyn-abi = "0.7.7"
alloy-transport-ws = "0.7.3"
alloy-provider = "0.7.3"
tokio-postgres = "0.7.13"
alloy-json-abi = "0.7.7"
alloy-primitives = "0.7.7"
tracing-subscriber = "0.3.19"
alloy = "0.7.3"
keccak-hasher = "0.15.3"
rlp = "0.5.2"
alloy-sol-types = "0.7.7"
trie-db = "0.24.0"
memory-db = "0.31.0"
