[package]
name = "cdk-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
eyre = "0.6"
toml = "0.8"

ring = "0.17"

[dev-dependencies]
ring = "0.17"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]

