[package]
name = "cdk-indexer"
version = "0.3.0"
edition = "2021"

[dependencies]
# Alloy meta-crate with full feature-set incl. WS providers, JSON ABI, dyn-ABI
alloy = { version = "1.0", features = ["full"] }
alloy-dyn-abi = "1.3"
alloy-json-abi = "1.3"
alloy-primitives = "1.3"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal"] }

# Streaming utils
futures-util = "0.3"

# Postgres
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# NATS JetStream / Object Store
async-nats = { version = "0.42" }

openssl = { version = "0.10", features = ["vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config, logging, tracing
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1.0"
hex = "0.4"

# For reading ABI files from disk
# camino = "1.1"

chrono = "0.4"

[build-dependencies]
vergen = { version = "9" }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
