[package]
name = "events-monitor"
version = "0.11.0"
edition = "2021"

[[bin]]
name = "api-client"
path = "client/api_client.rs"

[dependencies]
# Alloy meta-crate with full feature-set incl. WS providers, JSON ABI, dyn-ABI
alloy = { version = "1.0.42", features = ["full"] }
alloy-dyn-abi = "1.4"
alloy-json-abi = "1.4"
alloy-primitives = "1.4"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Streaming utils
futures = "0.3"
futures-util = "0.3"

# Postgres
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "runtime", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# NATS JetStream / Object Store
async-nats = "0.42"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config, logging, tracing, error handling
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

hex = "0.4"
sha3 = "0.10"
openssl = { version = "0.10", features = ["vendored"] }

# HTTP API requests
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Web API dependencies
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
