[package]
name = "load-tester-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Bednoff <andrew@commandr.stream>"]
license = "Apache-2.0"
description = "CLI tool for blockchain load testing using the LoadTester contract"
repository = "https://github.com/andrcmdr/cdk-soa-backend/tree/main/load-tester-cli"
keywords = ["ethereum", "blockchain", "alloy", "transactions", "web3", "load-testing", "stress-testing", "benchmarking"]
categories = ["cryptography::cryptocurrencies", "api-bindings", "load-testing", "stress-testing", "benchmarking"]

[[bin]]
name = "load-tester-cli"
path = "src/main.rs"

[dependencies]
# Transaction producer library
tx-producer = { path = "../tx-producer" }

# CLI framework
clap = { version = "4.5.48", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0.100"
thiserror = "1.0.69"

# Utilities
hex = "0.4.3"
chrono = "0.4.42"
colored = "2.1"
indicatif = "0.17"
humantime = "2.1"

# Statistics
hdrhistogram = "7.5"

# Random
rand = "0.8.5"

# Alloy types
alloy-primitives = "1.4.0"

# Futures
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"
