[package]
name = "merkle-trie-cli"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "merkle-cli"
path = "src/bin/merkle_cli.rs"

[[bin]]
name = "merkle-cli-ref"
path = "src/bin/merkle_cli_ref.rs"

# [[bin]]
# name = "merkle-cli-viem-compat"
# path = "src/bin/merkle_cli_viem_compat.rs"

[dependencies]
anyhow = "1.0.100"
thiserror = "1.0.69"
tracing = "0.1.41"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

csv = "1.3.1"

clap = { version = "4.5", features = ["derive"] }

# tiny-keccak = { version = "2.0", features = ["keccak"] }
keccak-hasher = "0.16.0"
hash-db = "0.16.0"

hex = "0.4.3"

# openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]
