[package]
name = "user-id-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-id-fetcher"
path = "src/user-id-fetcher.rs"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]
