[package]
name = "cdk-indexer"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
hex = "0.4"

# Alloy stack
alloy = { version = "0.7", features = ["provider-ws", "rpc-types", "sol-types", "json-abi"] }
alloy-json-abi = "0.7"
alloy-dyn-abi = "0.7"
alloy-provider = { version = "0.7", features = ["ws"] }
alloy-transport-ws = "0.7"
alloy-primitives = "0.7"

# NATS (JetStream + ObjectStore)
async-nats = "0.42"

openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace]

